--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Chen Liang | Full Stack Software Engineer | Toronto, Canada"
+      content="Chen Liang | Full Stack Software Engineer"
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Chen Liang | Full Stack Software Engineer | Toronto, Canada</title>
-    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Toronto, Front End Developer, Back End Developer, UI/UX Designer, Proudct Manager">
+    <title>Chen Liang | Full Stack Software Engineer</title>
+    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Toronto, San Francisco, Front End Developer, Back End Developer, UI/UX Designer, Proudct Manager">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
