--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Chen Liang | Full Stack Software Engineer</title>
-    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Toronto, San Francisco, Front End Developer, Back End Developer, UI/UX Designer, Proudct Manager">
+    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Toronto, New York, Front End Developer, Back End Developer, UI/UX Designer, Proudct Manager">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
