--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Chen Liang | Full Stack Software Engineer"
+      content="Chen Liang | Senior Software Enginee, Entrepreneur, Course Instructor, Career Mentor"
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Chen Liang | Full Stack Software Engineer</title>
-    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Toronto, New York, Front End Developer, Back End Developer, UI/UX Designer, Proudct Manager">
+    <title>Chen Liang | Senior Software Engineer | Entrepreneur | Mentor</title>
+    <meta name="keywords" content="Senior Software Engineer, Sessional Course Instructor, Career Mentor, Toronto, New York, Entrepreneur, Startups">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
